fixtures/cs-rng-01/good/indirect-math-random-ref.ts
export function pickUiColor() {
	const r = Math.random;
	return r();
}
