fixtures/cs-rng-01/bad/token-at-module-level.ts
const token = Math.random().toString(36);

export { token };
